chore: added ESLint and prettier and fixed errors by changing eslintrc to athom/homey-app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "athom"
+  "extends": ["athom/homey-app", "plugin:prettier/recommended"],
+  "rules": {
+    "prettier/prettier": "warn"
+  }
 }
