--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "com.energy-price.triggers",
   "version": "1.0.0",
   "main": "app.ts",
+  "engines": {
+    "node": ">=12.16.1"
+  },
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore ."
@@ -12,6 +15,9 @@
     "@types/node": "^18.11.17",
     "eslint": "^7.32.0",
     "eslint-config-athom": "^3.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   }
 }
