--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@tsconfig/node12": "^1.0.11",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.3",
     "@types/node": "^18.11.17",
-    "eslint": "^7.32.0",
+    "eslint": "^8.30.0",
     "eslint-config-athom": "^3.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "eslint-plugin-homey-app": "^1.0.2"
   }
 }
